# dymy

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code_quality.yml
dymy/: _constant.py  exceptions.py  utils.py
dymy/db/: dynamodb.py  mysql.py  sql.py
dymy/helpers/: converter.py  datetime.py  env.py
dymy/models/: aws.py  dynamodb.py  operation.py
dymy/models/dynamodb/: __init__.py  arg.py  operation.py
dymy/models/mysql/: table.py
