[tool.poetry]
name = "dymy"
version = "0.1.0"
description = "Helps to Migrate DynamoDB to MySQL"
authors = ["homoluctus <w.slife18sy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pymysql = "^0.10.0"
boto3 = "^1.14.47"
boto3-stubs = {extras = ["dynamodb"], version = "^1.14.56"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
isort = "^5.1.4"
mypy = "^0.782"
autopep8 = "^1.5.3"

[tool.isort]
atomic = true
line_length = 80
force_grid_wrap = 0
multi_line_output = 5
use_parentheses = true
lines_after_imports = 2
lines_between_types = 0
include_trailing_comma = false
known_first_party = ['dymy','tests']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
